# mate-file-manager-open-terminal

./: AUTHORS  ChangeLog  Makefile.am  autogen.sh  configure.ac  configure.in  org.mate.apps.caja-open-terminal.gschema.xml
.tx/: config
distro/archlinux/: PKGBUILD
distro/ubuntu/: build
po/: ChangeLog  LINGUAS  POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  bn_IN.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  gnome-copyrights.txt  gu.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  ko.po  ky.po  lt.po  lv.po  mk.po  ml.po  (+25 more)
src/: Makefile.am  caja-open-terminal.c
